template and bfs