@@ -3,7 +3,6 @@ package chapter1.problem4;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.math.BigDecimal;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
@@ -11,20 +10,10 @@ import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
-import static java.lang.Math.abs;
-
-public class LCDDisplay {
+public class Main2 {
     private static BufferedReader reader = new BufferedReader(new InputStreamReader(System.in));
-    String[] numberTemplates = new String[10];
-    public LCDDisplay(){
-        
-        
-      
+    public Main2(){
 
-    }
-
-    private String buildVerticalBlankLine(int scale) {
-        return " \n".repeat((2*scale)+3);
     }
 
     private Map<Integer, Boolean[]> buildNumbersParams() {
@@ -66,22 +55,30 @@ public class LCDDisplay {
         int rowIndex = 0;
         int colIndex = 0;
         lcdNumber[rowIndex++] =
-                builder.append(space).append(isTop ? horizontalSegment.repeat(scale): space.repeat(scale)).append(space).toString().split("");
+                builder.append(space).append(isTop ? getRepeat(scale, horizontalSegment) : getRepeat(scale, space)).append(space).toString().split("");
         builder=new StringBuilder();
         rowIndex = buildVerticalSegmentLine(scale, isTopLeft, isTopRight, builder, numCols, verticalSegment, space,
                 newLine,
                 lcdNumber, rowIndex);
         String segmentOrSpace = isCenter? horizontalSegment: space;
         lcdNumber[rowIndex++] =
-                builder.append(space).append(segmentOrSpace.repeat(scale)).append(space).toString().split("");
+                builder.append(space).append(getRepeat(scale, segmentOrSpace)).append(space).toString().split("");
         builder=new StringBuilder();
         rowIndex = buildVerticalSegmentLine(scale, isBottomLeft, isBottomRight, builder, numCols, verticalSegment,
                 space,
                 newLine, lcdNumber, rowIndex);
         lcdNumber[rowIndex++] =
-                builder.append(space).append(isBottom ? horizontalSegment.repeat(scale): space.repeat(scale)).append(space).toString().split("");
+                builder.append(space).append(isBottom ? getRepeat(scale, horizontalSegment) : getRepeat(scale, space)).append(space).toString().split("");
         return  lcdNumber;
 
+    }
+
+    private String getRepeat(int scale, String horizontalSegment) {
+        StringBuilder repeat = new StringBuilder();
+        for (int i = 0; i < scale; i++) {
+            repeat.append(horizontalSegment);
+        }
+        return repeat.toString();
     }
 
     private int buildVerticalSegmentLine(int scale, boolean isLeft, boolean isRight, StringBuilder builder,
@@ -89,52 +86,56 @@ public class LCDDisplay {
         if (isLeft && isRight) {
             for (int i = 0; i < scale; i++) {
                 StringBuilder verticalSegmentLine = new StringBuilder();
-                lcdNumber[rowIndex++] = verticalSegmentLine.append(verticalSegment).append(space.repeat(numCols-2))
+                lcdNumber[rowIndex++] = verticalSegmentLine.append(verticalSegment).append(getRepeat(numCols-2,
+                                space))
                         .append(verticalSegment).toString().split("");
             }
         } else if (isLeft) {
             for (int i = 0; i < scale; i++) {
                 StringBuilder verticalSegmentLine = new StringBuilder();
-                lcdNumber[rowIndex++] = verticalSegmentLine.append(verticalSegment).append(space.repeat(numCols - 1)).toString().split("");
+                lcdNumber[rowIndex++] =
+                        verticalSegmentLine.append(verticalSegment).append(getRepeat(numCols - 1, space)).toString().split("");
             }
         } else if (isRight) {
             for (int i = 0; i < scale; i++) {
                 StringBuilder verticalSegmentLine = new StringBuilder();
-                lcdNumber[rowIndex++] = verticalSegmentLine.append(space.repeat(numCols - 1)).append(verticalSegment).toString().split("");
+                lcdNumber[rowIndex++] =
+                        verticalSegmentLine.append(getRepeat(numCols - 1, space)).append(verticalSegment).toString().split("");
             }
         }
         return rowIndex;
     }
 
     public static void main(String[] args) throws IOException {
-        LCDDisplay lda =new LCDDisplay();
+        Main2 lda =new Main2();
         String input;
+        List<String[][]> outputs = new ArrayList<>();
         while ((input = reader.readLine()) != null) {
 
             List<String> str = Arrays.stream(input.trim().split(" "))
-                    .filter(x -> !x.equals("")).toList();
+                    .filter(x -> !x.equals("")).collect(Collectors.toList());
             if ("0".equals(str.get(0)) && "0".equals(str.get(1))) {
-                System.out.println();
-                System.out.println();
                 break;
             }
-            int scale = Integer.parseInt(str.get(0));
+            int originalScale = Integer.parseInt(str.get(0));
             String[] numbers = str.get(1).split("");
             Map<Integer, Boolean[]> numbersParams = lda.buildNumbersParams();
             int blankColumnCount = numbers.length - 1;
-            int colCountOfNumbers = (scale + 2) * numbers.length;
-            int numOfRows = (2 * scale) + 3;
-            int numColumns = scale + 2;
+            int colCountOfNumbers = (originalScale + 2) * numbers.length;
+            int numOfRows = (2 * originalScale) + 3;
+            int numColumns = originalScale + 2;
             String[][] lcdNumbers = new String[numOfRows][colCountOfNumbers + blankColumnCount];
             int numCount= 0;
             int colIndex = 0;
+            // get numbers for scale 1
+            int scale = 1;
             for (String number : numbers) {
                 Boolean[] numberParams = numbersParams.get(Integer.parseInt(number));
                 String[][] lcdNumber = lda.buildNumber(scale, numberParams[0], numberParams[1], numberParams[2],
                     numberParams[3],
                         numberParams[4], numberParams[5], numberParams[6]);
-                for (int j = 0; j < numColumns; j++) {
-                    for (int i = 0; i < numOfRows; i++) {
+                for (int j = 0; j < lcdNumber[0].length; j++) {
+                    for (int i = 0; i < lcdNumber.length; i++) {
                         lcdNumbers[i][colIndex] = lcdNumber[i][j];
                     }
                     colIndex++;
@@ -149,8 +150,12 @@ public class LCDDisplay {
 
             }
 
-            System.out.println();
-            System.out.println();
+            outputs.add(lcdNumbers);
+
+
+
+        }
+        for (String[][] lcdNumbers : outputs) {
             int numberOfCols = lcdNumbers[0].length;
             int numberOfRows = lcdNumbers.length;
             for (int i = 0; i < numberOfRows; i++) {
@@ -159,26 +164,8 @@ public class LCDDisplay {
                 }
                 System.out.println();
             }
-
-
+            System.out.println();
         }
     }
 
-    private static long getAmountToChangeHands(long[] amounts, long average, long remainder) {
-
-        long amountToChangeHands = 0;
-
-        int numOfStudentsWhoSpentMoreThanAvg = 0;
-        for(long amount: amounts){
-            if(amount < average) {
-                amountToChangeHands += abs(amount - average);
-                numOfStudentsWhoSpentMoreThanAvg++;
-            }
-        }
-        // distribute remainder among all of the students
-        remainder = remainder > numOfStudentsWhoSpentMoreThanAvg? remainder - numOfStudentsWhoSpentMoreThanAvg: 0;
-
-        return amountToChangeHands + remainder;
-
-    }
 }
